css/gallery.css
/* ... */
.fa-search {
	position: absolute;
	z-index: 2;
	right: 274px;
	top: 35px;
	color: white;
}
@media (max-width: 992px) {
	#nav-menu-container {
    display: none;
  }
}

@media (max-width: 768px) {
	#searchText {
		display: block;
		margin-right: 63px;
	}
	.fa-search {
		position: absolute;
		z-index: 2;
		right: 233px;
		top: 35px;
		color: white;
	}
	.m-t-left {
		left: -15px;
	}
	.m-c-right {
		right: 4px;
		
	}
	
}


/* Nav Meu Styling */
.nav-menu a {
	padding: 0 8px 10px 8px;
	text-decoration: none;
	display: inline-block;
	color: black;
	font-weight:bold;
	font-family: "Poppins", sans-serif;
	text-transform: uppercase;
	font-size: 13px;
	outline: none;
}

.nav-menu > li {
  margin-left: 10px;
}

.nav-menu > li > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  /*background-color: #2dc997;*/
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.nav-menu a:hover:before, .nav-menu li:hover > a:before, .nav-menu .menu-active > a:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.nav-menu ul {
  margin: 4px 0 0 0;
  border: 1px solid #e7e7e7;
}

.nav-menu ul li {
  background: #fff;
}

.nav-menu ul li:first-child {
  border-top: 0;
}

.nav-menu ul li a {
  padding: 10px;
  color: #333;
  transition: 0.3s;
  display: block;
  font-size: 13px;
  text-transform: none;
}

.nav-menu ul li a:hover {
  /*background: #2dc997;*/
  color: #333;
}

.nav-menu ul ul {
  margin: 0;
}

/* Mobile Nav Toggle */
#mobile-nav-toggle {
  position: fixed;
  right: 0;
  top: 0;
  z-index: 999;
  margin: 20px 20px 0 0;
  border: 0;
  font-size: 24px;
  display: none;
  transition: all 0.4s;
  outline: none;
  cursor: pointer;
}

#mobile-nav-toggle i {
  color: #fff;
}
#searchGroup input {
  color: black;
}

@media (max-width: 992px) {
  #mobile-nav-toggle {
    display: inline;
	margin-right: 70px;
  }
  #searchGroup input, #searchGroup .glyphicon {
	  color: white;
  }
  #searchText {
	  border-color: white;
  }
	#call-to-action .cta-text {
		color: #fff;
		position: relative;
		z-index: 1;
		top: -37px;
		text-align: center;
		left: 0px;
	}
}


@media (max-width: 550px) {
	#mobile-nav-toggle {
		display: inline;
		margin-right: 30px;
	}
}

/* Mobile Nav Styling */
#mobile-nav {
  position: fixed;
  top: 0;
  padding-top: 18px;
  bottom: 0;
  z-index: 998;
  background: rgba(52, 59, 64, 0.9);
  left: -260px;
  width: 260px;
  overflow-y: auto;
  transition: 0.4s;
}

#mobile-nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

#mobile-nav ul li {
  position: relative;
}

#mobile-nav ul li a {
  color: #fff;
  font-size: 16px;
  overflow: hidden;
  padding: 10px 22px 10px 15px;
  position: relative;
  text-decoration: none;
  width: 100%;
  display: block;
  outline: none;
}

	#mobile-nav ul li a:hover {
		color: #fafafa;
	}

#mobile-nav ul li li {
  padding-left: 30px;
}

#mobile-nav ul .menu-has-children i {
  position: absolute;
  right: 0;
  z-index: 99;
  padding: 15px;
  cursor: pointer;
  color: #fff;
}

#mobile-nav ul .menu-has-children i.fa-chevron-up {
  /*color: #2dc997;*/
}

#mobile-nav ul .menu-item-active {
  /*color: #2dc997;*/
}

#mobile-body-overly {
  width: 100%;
  height: 100%;
  z-index: 997;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(52, 59, 64, 0.9);
  display: none;
}

/* Mobile Nav body classes */
body.mobile-nav-active {
  overflow: hidden;
}

body.mobile-nav-active #mobile-nav {
  left: 0;
}

body.mobile-nav-active #mobile-nav-toggle {
  color: #fff;
}

/*--------------------------------------------------------------
# Sections
--------------------------------------------------------------*/
/* Sections Header
--------------------------------*/
.section-header .section-title {
  font-size: 32px;
  color: #111;
  text-transform: uppercase;
  text-align: center;
  font-weight: 700;
  margin-bottom: 5px;
}

.section-header .section-description {
	/*text-align: center;*/
	padding-bottom: 40px;
	color: black;
}

/* About Us Section
--------------------------------*/
#about {
  background: #fff;
  padding: 80px 0;
}

#about .about-container .background {
  min-height: 300px;
  background: url(../img/about-img.jpg) center top no-repeat;
  margin-bottom: 10px;
}

#about .about-container .content {
  background: #fff;
}

#about .about-container .title {
  color: #333;
  font-weight: 700;
  font-size: 32px;
}

@media (max-width: 768px) {
  #about .about-container .title {
    padding-top: 15px;
  }
}

#about .about-container p {
  line-height: 26px;
}

#about .about-container p:last-child {
  margin-bottom: 0;
}

#about .about-container .icon-box {
  background: #fff;
  background-size: cover;
  padding: 0 0 30px 0;
}

#about .about-container .icon-box .icon {
  float: left;
  background: #fff;
  width: 64px;
  height: 64px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  border-radius: 50%;
  border: 2px solid #2dc997;
}

#about .about-container .icon-box .icon i {
  /*color: #2dc997;*/
  font-size: 24px;
}

#about .about-container .icon-box .title {
  margin-left: 80px;
  font-weight: 500;
  margin-bottom: 5px;
  font-size: 18px;
  text-transform: uppercase;
}

#about .about-container .icon-box .title a {
  color: #111;
}
a:hover {
	color: #fafafa;
}
#about .about-container .icon-box .description {
	margin-left: 80px;
	line-height: 24px;
	font-size: 14px;
}

/* Facts Section
--------------------------------*/
#facts {
  background: #f7f7f7;
  padding: 80px 0 60px 0;
}

#facts .counters span {
  font-size: 48px;
  display: block;
  color: #2dc997;
}

#facts .counters p {
  padding: 0;
  /*margin: 0 0 20px 0;*/
  font-family: "Poppins", sans-serif;
  font-size: 14px;
}
/* ... */

